fix the overflow of the payment preview img

--- a/frontend/src/pages/payment/Payment.css
+++ b/frontend/src/pages/payment/Payment.css
@@ -18,6 +18,11 @@
     justify-content: center;
     align-items: center;
 }
+.receipt-div{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
 .payment-receipt-btn{
     background-color: #FB9D57;
     padding:0px 10px;
